--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,16 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container-fluid header__container">
+    <a href="#" class="logo">
+      <img loading="lazy" src="../img/svg/ROBO.SCHOOL.svg" class="image" width="228" height="48"
+        alt="Логотип RoboSchool">
+    </a>
+    <nav class="nav" title="Главное меню">
+      <ul class="nav__list list-reset">
+        <li class="nav__item"><a href="#about" class="nav__link" data-scroll>О школе</a></li>
+        <li class="nav__item"><a href="#trainers" class="nav__link" data-scroll>Тренеры</a></li>
+        <li class="nav__item"><a href="#tariffs" class="nav__link" data-scroll>Стоимость</a></li>
+      </ul>
+    </nav>
+    <a href="tel:+242342" class="phone">+234242352</a>
+  </div>
 </header>
