--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,1 +1,3 @@
-// @include font-face("Muller", "../fonts/MullerRegular", 400, normal);
+@include font-face("Jost", "../resources/fonts/Jost-Regular", 400, normal);
+@include font-face("Jost", "../resources/fonts/Jost-SemiBold", 600, normal);
+@include font-face("Jost", "../fonts/resources/Jost-Bold", 700, normal);
