Finish about. Need reorganize tooltip.

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -15,14 +15,14 @@
 		margin: 0;
 		margin-bottom: 50px;
 		font-weight: 600;
-		font-style: 70px;
+		font-size: 70px;
 		line-height: 160%;
 		text-transform: uppercase;
 		color: var(--light-color);
 
 		&-text {
 			display: block;
-			min-width: 90%;
+			max-width: 90%;
 			font-weight: 400;
 			font-size: 20px;
 			line-height: 160%;
