--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,6 @@
 @import "./components/hero";
 @import "./components/nav";
 @import "./components/phone";
+@import "./components/about";
+@import "./components/benefits";
+
