--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits">
+q<section class="benefits section-offset">
   <div class="container">
     <h2 class="benefits__title section-title">
       Что вы получите после курса
@@ -8,7 +8,7 @@
         <h3 class="benefits__subtitle">
           Удостоверение
         </h3>
-        <p class="benefits__dscr">
+        <p class="benefits__descr">
           Дающее право преподавать робототезнику для детей 6-12лет в образовательных школах
         </p>
       </li>
@@ -16,7 +16,7 @@
         <h3 class="benefits__subtitle">
           Знания
         </h3>
-        <p class="benefits__dscr">
+        <p class="benefits__descr">
           Дающее право преподавать робототезнику для детей 6-12лет в образовательных школах
         </p>
       </li>
@@ -24,14 +24,18 @@
         <h3 class="benefits__subtitle">
           Практика
           <span class="tooltip">
-            <button class="tooltip__btn btn-reset" aria-describedby="id1"></button>
+            <button class="tooltip__btn btn-reset" aria-describedby="id1">
+              <svg class="">
+                <use xlink:href="img/sprite.svg#i"></use>
+              </svg>
+            </button>
             <span class="tooltip__txt" role="tooltip" id="id1">
               <span class="visually-hidden">Тултип: </span>
               При наличии свободных мест
             </span>
           </span>
         </h3>
-        <p class="benefits__dscr">
+        <p class="benefits__descr">
           Дающее право преподавать робототезнику для детей 6-12лет в образовательных школах
         </p>
       </li>
