--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -4,7 +4,7 @@
 			<h1 class="hero__title">
 				Robo School
 				<span class="hero__title-text">
-					Курсы повышения квалификации по робототехникедля подростков начальной
+					Курсы повышения квалификации по робототехникедля для педагогов начальной
 					школы
 				</span>
 			</h1>
