--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,9 +1,9 @@
-<section class="about" id="about">
+<section class="about section-offset" id="about">
 	<div class="container">
 		<h2 class="visually-hidden">
 			O школе RoboSchool 
 		</h2>
-		<p class="about__didcr">
+		<p class="about__discr">
 			<span class="about__descr-highlight">Robo School</span> - учреждение для формирования кадрового педагогического 
 			резерва в сфере робототехники для 
 			программирования
@@ -12,25 +12,25 @@
 			<li class="about__item">
 				<div class="about__digit">10</div>
 				<p class="about__text">
-					УМК по различным направлениям по работотехнике
+					УМК по различным направлениям по робототехнике
 				</p>
 			</li>
 			<li class="about__item">
 				<div class="about__digit">20</div>
 				<p class="about__text">
-					УМК по различным направлениям по работотехнике
+					Школ, в которых запущена робототехника
 				</p>
 			</li>
 			<li class="about__item">
 				<div class="about__digit">50</div>
 				<p class="about__text">
-					УМК по различным направлениям по работотехнике
+					Педагогов прошедших курсы повышения квалификации
 				</p>
 			</li>
 			<li class="about__item">
 				<div class="about__digit">1110</div>
 				<p class="about__text">
-					УМК по различным направлениям по работотехнике
+					Обученных детей на базе собственных центров
 				</p>
 			</li>
 		</ul>
