--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,10 +6,12 @@
 
 // подключения компонентов страницы
 @import "./components/btn";
+@import "./components/section-title";
+@import "./components/tooltip";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/nav";
 @import "./components/phone";
 @import "./components/about";
 @import "./components/benefits";
-
+@import "./components/trainers";
